--- a/index.html
+++ b/index.html
@@ -1,16 +1,148 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>NASA</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="main.css"/>
 </head>
-
 <body>
-    <!-- Write Your Code Here!! -->
+<div class="header">
+    <div class="logo-link">
+        <img src="images/nasa-logo.svg">
+    </div>
+    <div class="head-link">
+        <div class="head-link-top">Mission&nbsp&nbsp
+            |&nbsp&nbsp
+            Galleries&nbsp&nbsp
+            |&nbsp&nbsp
+            NASA TV&nbsp&nbsp
+            |&nbsp&nbsp
+            Downloads&nbsp&nbsp
+            |&nbsp&nbsp
+            About&nbsp&nbsp
+            |&nbsp&nbsp
+            NASA Audiences&nbsp&nbsp
+        </div>
+        <div class="head-link-bottom">
+            &nbsp&nbspHumans in Space&nbsp&nbsp&nbsp
+            |&nbsp&nbsp&nbsp
+            Moon to Mars&nbsp&nbsp&nbsp
+            |&nbsp&nbsp&nbsp
+            Earth&nbsp&nbsp&nbsp
+            |&nbsp&nbsp&nbsp
+            Space&nbsp&nbsp&nbsp
+            |&nbsp&nbsp&nbsp
+            Flight&nbsp&nbsp&nbsp
+            |&nbsp&nbsp&nbsp
+            Solar System and Beyond&nbsp&nbsp&nbsp
+            |&nbsp&nbsp&nbsp
+            Education&nbsp&nbsp&nbsp
+            |&nbsp&nbsp&nbsp
+            History&nbsp&nbsp&nbsp
+            |&nbsp&nbsp&nbsp
+            Benefits to You&nbsp&nbsp&nbsp
+        </div>
+    </div>
+    <div class="head-search">
+        <input type="text" placeholder="search">
+        <img src="images/search.svg" style="margin-left: -15%">
+        <img src="images/share.svg">
+    </div>
+</div>
+<div class="content">
+    <div class="content-top">
+        <div class="content-top-dawn">
+                <label>Dawn</label>
+                <div>Dusk for Dawn:Mission of Many First to Gather More Data in Home Stretch</div>
+        </div>
+        <div class="content-top-all">
+            <div class="content-top-all-top">
+                <div class="content-top-all-top-left">
+                    <label>climate</label>
+                    <div>A Scientist's Final Paper Looks Toward Earth's Future Climate</div>
+                </div>
+                <div class="content-top-all-top-right">
+                    <div style="font-size: 11px;margin: 2%;">
+                        NASA Events
+                        <br/>
+                        <hr/>
+                        Calling All Social Media Users!Apply to Experience the Launch od NASA'S ICESat-2
+                        No Earlier Than Saturday.Aug.4,4 a.m.EOT:Launch of Parker Solar Probe from Cape Canaveral
+                        Air Force
+                        <br/><br/><br/><br/><br/><br/><br/>
+                        <hr/>
+                        <div>NASA TV Schedule &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+                            Launches and Landings
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="content-top-all-bottom">
+                <label style="padding: 0"></label>
+                <div>July 16,1969:Liftoff of Apollo 11</div>
+            </div>
+        </div>
+    </div>
+    <div class="content-bottom">
+        <div class="content-bottom-top">
+            <div class="content-bottom-top-item1">
+                <label>Image of the Day</label>
+                <div>A Merger of Stars</div>
+            </div>
+            <div class="content-bottom-top-item2">
+                <label>Asteroids</label>
+                <div>Observatories Team Up to Reveal Rare Double Asteroid</div>
+            </div>
+            <div class="content-bottom-top-item3">
+                <video src="images/video.mp4" height="100%" width="100%"></video>
+            </div>
+        </div>
+        <div class="content-bottom-bottom">
+            <div class="content-bottom-bottom-item1">
+                <label>About NASA</label>
+                <div>NASA Statement on Nomination for Agency Deputy Administrator</div>
+            </div>
+            <div class="content-bottom-bottom-item2">
+                <label>Juno</label>
+                <div>NASA Juno Data Indicate Another Possible Volcano on Jupiter Moon lo</div>
+            </div>
+            <div class="content-bottom-bottom-item3">
+                <label>Cassini</label>
+                <div>NASA'S Cassini Coverage Lands an Emmy Nomination</div>
+            </div>
+            <div class="content-bottom-bottom-item4">
+                <label>Fermi Space Telescope</label>
+                <div>NASA'S Fermi Traces Source of Cosmic Neutrino to Monster Black Hole</div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="footer">
+    <div class="footer-border">MORE STORIES</div>
+    <div class="footer-content">
+        <div class="footer-content-left">
+            <img src="images/nasa_logo.png">
+            <div style="color:white">
+                National Aeronautics and Space Administration NASA OfficIal:Brian Dunbar
+            </div>
+        </div>
+        <div class="footer-content-right">
+            No&nbspFear&nbspAct
+            &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+            FOIA
+            &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+            Privacy
+            &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+            Office&nbspof&nbspInspector&nbsp&General
+            &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+            Agency&nbspFinancial&nbspReports
+            &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+            Contact&nbspNASA
+        </div>
+    </div>
+</div>
 </body>
-
+<script src="index.js"></script>
 </html>
